--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <meta http-equiv=”X-UA-Compatible” content=”ie=edge”>
+
+
     <title>Amy Haigh&mdash;Graphic Designer</title>
 
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
@@ -49,7 +54,7 @@
                     <input type="radio" name="slides" id="slide1" checked>
 
                     <figure>
-                    <img src="images/1-VoN_AmyHaigh_banner.jpg" alt="Visions of Nature, The Natural History Museum. Design by Amy Haigh.">
+                    <img src="1-VoN_AmyHaigh_banner.jpg" alt="Visions of Nature, The Natural History Museum. Design by Amy Haigh.">
                     <figcaption>Featured project: Visions of Nature, Natural History Museum. Open now. <i>[Role: Lead Graphic Designer for exhibition, wayfinding, and marketing]</i></figcaption>
                     <label for="slide4" class="last">
                         &#8592;
@@ -65,7 +70,7 @@
                     <input type="radio" name="slides" id="slide2">
 
                     <figure>
-                        <img src="images/2-VoN_AmyHaigh_main_scene.jpg" alt="Visions of Nature, The Natural History Museum. Design by Amy Haigh."
+                        <img src="2-VoN_AmyHaigh_main_scene.jpg" alt="Visions of Nature, The Natural History Museum. Design by Amy Haigh."
                         >
                         <figcaption>Featured project: Visions of Nature, Natural History Museum. Open now. <i>[Role: Lead Graphic Designer for exhibition, wayfinding, and marketing]</i></figcaption>
                         <label for="slide1" class="last">
@@ -82,7 +87,7 @@
                     <input type="radio" name="slides" id="slide3">
 
                     <figure>
-                        <img src="images/3-VoN_AmyHaigh_intro_text_colour.jpg" alt="Visions of Nature, The Natural History Museum. Design by Amy Haigh."
+                        <img src="3-VoN_AmyHaigh_intro_text_colour.jpg" alt="Visions of Nature, The Natural History Museum. Design by Amy Haigh."
                         >
                         <figcaption>Featured project: Visions of Nature, Natural History Museum. Open now. <i>[Role: Lead Graphic Designer for exhibition, wayfinding, and marketing]</i></figcaption>
                         <label for="slide2" class="last">
@@ -102,7 +107,7 @@
                     <input type="radio" name="slides" id="slide4">
 
                     <figure>
-                        <img src="images/4-VoN_AmyHaigh_wayfinding.jpg" alt="Visions of Nature, The Natural History Museum. Design by Amy Haigh."
+                        <img src="4-VoN_AmyHaigh_wayfinding.jpg" alt="Visions of Nature, The Natural History Museum. Design by Amy Haigh."
                         >
                         <figcaption>Featured project: Visions of Nature, Natural History Museum. Open now. <i>[Role: Lead Graphic Designer for exhibition, wayfinding, and marketing]</i></figcaption>
                         <label for="slide3" class="last">
