--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>Amy Haigh&mdash;Graphic Designer</title>
 
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -156,11 +156,11 @@
 
 
 
-<p class="Linkedin"><a href="https://www.linkedin.com/in/amyhaighxyz/">LinkedIn</a></p>
+<p class="Linkedin"><a href="https://www.linkedin.com/in/amyhaighxyz/" target="_blank">LinkedIn</a></p>
 
 
 
-<footer><p>©Amy Haigh 2024. <a href="https://www.linkedin.com/in/amyhaighxyz/">Museums Association member.</a></p></footer>
+<footer><p>©Amy Haigh 2024. <a href="https://www.museumsassociation.org/find-a-product-or-service/supplier-detail/?id=66ec6d3d-8ca6-ef11-95f6-7c1e5204407b" target="_blank">Museums Association member.</a></p></footer>
 
 
 </div>
