--- a/index.html
+++ b/index.html
@@ -154,14 +154,16 @@
 
 
 
+   
+
+            <div class="Linkedin"><p><a href="https://www.linkedin.com/in/amyhaighxyz/" target="_blank">LinkedIn</a></p></div>
 
 
-<p class="Linkedin"><a href="https://www.linkedin.com/in/amyhaighxyz/" target="_blank">LinkedIn</a></p>
 
+            <footer><p>©Amy Haigh 2024. <a href="https://www.museumsassociation.org/find-a-product-or-service/supplier-detail/?id=66ec6d3d-8ca6-ef11-95f6-7c1e5204407b" target="_blank">Museums Association member.</a></p></footer>
+        
 
-
-<footer><p>©Amy Haigh 2024. <a href="https://www.museumsassociation.org/find-a-product-or-service/supplier-detail/?id=66ec6d3d-8ca6-ef11-95f6-7c1e5204407b" target="_blank">Museums Association member.</a></p></footer>
-
+            <div class="footer-bar"></div>
 
 </div>
 
