--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 
 
-            <footer><p>©Amy Haigh 2024. <a href="https://www.museumsassociation.org/find-a-product-or-service/supplier-detail/?id=66ec6d3d-8ca6-ef11-95f6-7c1e5204407b" target="_blank">Museums Association member.</a></p></footer>
+            <footer><p>©Amy Haigh 2024. </p></footer>
         
 
             <div class="footer-bar"></div>
