--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 
 
-            <footer><p>©Amy Haigh 2024. </p></footer>
+            <footer><p>©Amy Haigh 2024. <a href="https://linktr.ee/freepalestine1991" target="_blank">&#127817 </a></p></footer>
         
 
             <div class="footer-bar"></div>
