--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <div class="row1">
 
                 <div class="bio-text">
-                    <p>Freelance Graphic Designer with 10+ years creative experience, based in SE London.<br><br>
+                    <p>Freelance Graphic Designer and Artworker with 10+ years creative experience, based in SE London.<br><br>
 
                 I specialise in environmental and exhibition graphics, interpretation design, and image work within the cultural sector—with particular emphasis on translating graphic elements for use across print and spacial interfaces.<br><br>
                 
-                I hold an MA in Information Experience Design from the Royal College of Art, a research-based course exploring the possibilities of experiencing information within digital and physical spaces. I take my work very seriously and am meticulous in my practices, resulting in consistently positive feedback from clients and end users.<br><br><i>Full portfolio available on request.</i></p>
-                <br><p>Past clients include: <br>Natural History Museum <br> PlayStation London Studio <br> Superflux <br> National Army Museum <br>Delfina Foundation<br>Studio Cassells <br>
+                I hold an MA in Information Experience Design from the Royal College of Art, a research-based course exploring the possibilities of experiencing information within digital and physical spaces. <br><br><i>Full portfolio available on request.</i></p>
+                <br><p>Past clients include: <br>Natural History Museum <br> The National Archives <br> Superflux <br> Delfina Foundation<br>Event<br>Studio Cassells <br>
                     University of the Arts London <br> Surrey Hills Arts<br><br> [Agency clients]: <br>V&A London <br>
                     The British Library <br> The National Trust <br> Museum of London <br> Wellcome Collection <br> Shire Hall Dorcester <br> Bletchley Park <br> Somerset House</p>
                 </div>
@@ -160,7 +160,7 @@
 
 
 
-            <footer><p>©Amy Haigh 2024. <a href="https://linktr.ee/freepalestine1991" target="_blank">&#127817 </a></p></footer>
+            <footer><p>©Amy Haigh 2025. <a href="https://linktr.ee/freepalestine1991" target="_blank">&#127817 </a></p></footer>
         
 
             <div class="footer-bar"></div>
